# graphwrite

./: .gitignore  CHANGELOG.md  README.md
backend/: .dockerignore  package-lock.json  package.json  server.js
backend/notes/README/: README.md
frontend/: .dockerignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: Api.ts  App.tsx  Editor.tsx  GraphView.tsx  Settings.tsx  app.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json  mobile.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: app.tsx  contextMenu.tsx  editor.tsx  graphView.tsx  settings.tsx  startScreen.tsx  tintedImage.tsx
frontend/src/extensions/: livePreview.ts  newFile.ts
frontend/src/extentions/: NewFile.ts
frontend/src/helpers/: Api.ts  GraphLayout.ts  TintedImage.tsx  api.http.ts  api.indexeddb.ts  demoSeed.md  demoStore.ts  graphLayout.ts  graphStorage.ts  haptics.ts  openExternal.ts  paths.ts  recents.ts  settings.ts  textScale.ts  zoom.ts
frontend/src/hooks/: useAutoHideTitle.ts  useLongPress.ts  useNotes.ts  useZoom.ts
frontend/src/style/: App.css  Editor.css  Graph.css  Settings.css  app.css  editor.css  graph.css  settings.css  startScreen.css
