[package]
name = "graphwrite"
version = "0.1.1"
description = "GraphWrite desktop app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "graphwrite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# Opens external links (http/mailto) in the system browser instead of the webview.
tauri-plugin-opener = "2"

# Linux-only: used to flip WebKitGTK's enable-smooth-scrolling setting on the
# webview (off by default, which makes wheel scrolling feel stepped/jagged).
# Pinned to the version Tauri itself uses so the WebView types match.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

# Native haptics (vibration) — mobile only, so it's not pulled into desktop builds.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-haptics = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
